Add user interface to L2MAC framework
Add user interface for L2MAC framework and enhance command-line interface for Snake Game.

* **Flask Web Application**:
  - Add routes and templates for user input of prompts and displaying generated outputs in `docs/generated_examples/url_shortener_web_application/app.py`.
  - Integrate the L2MAC framework to handle user inputs and generate outputs.

* **VitePress Documentation**:
  - Add a section on using the new user interface in `docs/.vitepress/config.mts`.

* **Configuration File**:
  - Update `config/config.yaml` to include settings for the user interface, such as API keys and base URLs.

* **Snake Game**:
  - Enhance `docs/generated_examples/snake_game/main.py` using the `rich` library for a more visually appealing command-line interface.
  - Add colored text for different game events.
  - Highlight important messages with bold or bright colors.
  - Use `rich`'s `Panel` to create visually appealing borders around sections of the game output.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Toowiredd/codebasemaker?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,7 @@ llm:
   model: "gpt-4o"
   base_url: "https://api.openai.com/v1"  # or forward url / other llm url
   api_key: "YOUR_API_KEY"
+
+ui:
+  api_key: "YOUR_UI_API_KEY"
+  base_url: "https://your-ui-base-url.com"
